--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,69 +1,83 @@
-<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/drawerLayout"
-    android:layout_width="match_parent"
-    android:background="@color/white"
-    android:layout_height="match_parent">
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <!-- Main content layout -->
-    <LinearLayout
+    <data>
+        <variable
+            name="viewModel"
+            type="com.example.reminisce_ticketing.MainActivityViewModel" />
+    </data>
+
+    <androidx.drawerlayout.widget.DrawerLayout
+        android:id="@+id/drawerLayout"
         android:layout_width="match_parent"
-        android:orientation="vertical"
+        android:background="@color/white"
         android:layout_height="match_parent">
+
+        <!-- Main content layout -->
         <LinearLayout
             android:layout_width="match_parent"
-            android:orientation="horizontal"
-            android:layout_marginTop="@dimen/_10sdp"
-            android:layout_marginRight="@dimen/_12sdp"
-            android:background="@color/white"
-            android:layout_marginLeft="@dimen/_12sdp"
-            android:layout_marginBottom="@dimen/_10sdp"
-            android:layout_height="@dimen/_40sdp">
-            <ImageView
-                android:id="@+id/menuButton"
-                android:layout_width="@dimen/_35sdp"
-                android:layout_height="@dimen/_35sdp"
-                android:layout_gravity="center"
-                android:src="@drawable/ic_menu"/>
+            android:orientation="vertical"
+            android:layout_height="match_parent">
 
-            <TextView
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:layout_weight="1"
-                android:layout_gravity="center"
-                android:textStyle="bold"
-                android:textFontWeight="800"
-                android:fontFamily="@font/nunitosans_10pt_bold"
-                android:textColor="@color/black"
-                android:text="Home"
-                android:textSize="@dimen/_18sdp" />
-            <ImageView
-                android:id="@+id/iv_notification"
-                android:layout_width="@dimen/_35sdp"
-                android:layout_height="@dimen/_35sdp"
-                android:layout_gravity="center"
-                android:src="@drawable/ic_notification"/>
+                android:orientation="horizontal"
+                android:layout_marginTop="@dimen/_10sdp"
+                android:layout_marginRight="@dimen/_12sdp"
+                android:background="@color/white"
+                android:layout_marginLeft="@dimen/_12sdp"
+                android:layout_marginBottom="@dimen/_10sdp"
+                android:layout_height="@dimen/_40sdp">
+
+                <ImageView
+                    android:id="@+id/menuButton"
+                    android:layout_width="@dimen/_35sdp"
+                    android:layout_height="@dimen/_35sdp"
+                    android:layout_gravity="center"
+                    android:src="@drawable/ic_menu" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:layout_weight="1"
+                    android:layout_gravity="center"
+                    android:textStyle="bold"
+                    android:textFontWeight="800"
+                    android:fontFamily="@font/nunitosans_10pt_bold"
+                    android:textColor="@color/black"
+                    android:text="Home"
+                    android:textSize="@dimen/_18sdp" />
+
+                <ImageView
+                    android:id="@+id/iv_notification"
+                    android:layout_width="@dimen/_35sdp"
+                    android:layout_height="@dimen/_35sdp"
+                    android:layout_gravity="center"
+                    android:src="@drawable/ic_notification" />
+            </LinearLayout>
+
+            <FrameLayout
+                android:id="@+id/fragmentContainer"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+
+
+            <!-- Add your main content here -->
+
         </LinearLayout>
-        <FrameLayout
-            android:id="@+id/fragmentContainer"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+
+        <com.google.android.material.navigation.NavigationView
+            android:id="@+id/navigationView"
+            android:layout_width="@dimen/_250sdp"
+            android:layout_height="match_parent"
+            android:layout_gravity="start"
+            android:background="@color/white">
+
+            <!-- Include your custom navigation drawer layout -->
+            <include layout="@layout/layout_drawer" />
+
+        </com.google.android.material.navigation.NavigationView>
 
 
-        <!-- Add your main content here -->
-
-    </LinearLayout>
-    <com.google.android.material.navigation.NavigationView
-        android:id="@+id/navigationView"
-        android:layout_width="@dimen/_250sdp"
-        android:layout_height="match_parent"
-        android:layout_gravity="start"
-        android:background="@color/white">
-
-        <!-- Include your custom navigation drawer layout -->
-        <include layout="@layout/layout_drawer" />
-
-    </com.google.android.material.navigation.NavigationView>
-
-
-</androidx.drawerlayout.widget.DrawerLayout>
+    </androidx.drawerlayout.widget.DrawerLayout>
+</layout>
