--- a/app/src/main/res/layout/layout_drawer.xml
+++ b/app/src/main/res/layout/layout_drawer.xml
@@ -1,198 +1,211 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/white"
-    android:orientation="vertical">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Menu"
-        android:textColor="@color/black"
-        android:layout_gravity="center"
-        android:gravity="center"
-        android:textSize="@dimen/_17sdp"
-        android:layout_marginTop="@dimen/_8sdp"
-        android:fontFamily="@font/nunitosans_10pt_bold"
-        />
+    <data>
+
+        <import type="android.view.View"/>
+
+    </data>
+
     <LinearLayout
-        android:id="@+id/home_item"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/_40sdp"
-        android:layout_marginLeft="@dimen/_7sdp"
-        android:layout_marginTop="@dimen/_7sdp"
-        android:layout_marginRight="@dimen/_7sdp"
-        android:orientation="horizontal">
-
-        <ImageView
-            android:layout_width="@dimen/_23sdp"
-            android:layout_height="@dimen/_23sdp"
-            android:layout_gravity="center"
-            android:src="@drawable/ic_home"
-            app:tint="#2F34B2" />
+        android:layout_height="match_parent"
+        android:background="@color/white"
+        android:orientation="vertical">
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_weight="1"
-            android:layout_marginLeft="@dimen/_11sdp"
-            android:fontFamily="@font/nunito_regular"
-            android:gravity="left"
-            android:text="Home"
+            android:text="Menu"
             android:textColor="@color/black"
-            android:textFontWeight="800"
-            android:textSize="@dimen/_11sdp"
-            android:textStyle="bold" />
-
-        <ImageView
-            android:layout_width="@dimen/_12sdp"
-            android:layout_height="@dimen/_12sdp"
             android:layout_gravity="center"
-            android:src="@drawable/ic_right" />
-    </LinearLayout>
-    <LinearLayout
-        android:id="@+id/scan_item"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/_40sdp"
-        android:layout_marginLeft="@dimen/_7sdp"
-        android:layout_marginRight="@dimen/_7sdp"
-        android:orientation="horizontal">
+            android:gravity="center"
+            android:textSize="@dimen/_17sdp"
+            android:layout_marginTop="@dimen/_8sdp"
+            android:fontFamily="@font/nunitosans_10pt_bold" />
 
-        <ImageView
-            android:layout_width="@dimen/_23sdp"
-            android:layout_height="@dimen/_23sdp"
-            android:layout_gravity="center"
-            android:src="@drawable/ic_scaner"
-            app:tint="#2F34B2" />
-
-        <TextView
+        <LinearLayout
+            android:id="@+id/home_item"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_weight="1"
-            android:fontFamily="@font/nunito_regular"
-            android:gravity="left"
-            android:text="Scan Ticket"
-            android:textColor="@color/black"
-            android:textFontWeight="800"
-            android:layout_marginLeft="@dimen/_11sdp"
-            android:textSize="@dimen/_11sdp"
-            android:textStyle="bold" />
+            android:layout_height="@dimen/_40sdp"
+            android:layout_marginLeft="@dimen/_7sdp"
+            android:layout_marginTop="@dimen/_7sdp"
+            android:layout_marginRight="@dimen/_7sdp"
+            android:orientation="horizontal">
 
-        <ImageView
-            android:layout_width="@dimen/_12sdp"
-            android:layout_height="@dimen/_12sdp"
-            android:layout_gravity="center"
-            android:src="@drawable/ic_right" />
+            <ImageView
+                android:layout_width="@dimen/_23sdp"
+                android:layout_height="@dimen/_23sdp"
+                android:layout_gravity="center"
+                android:src="@drawable/ic_home"
+                app:tint="#2F34B2" />
 
-    </LinearLayout>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_weight="1"
+                android:layout_marginLeft="@dimen/_11sdp"
+                android:fontFamily="@font/nunito_regular"
+                android:gravity="left"
+                android:text="Home"
 
-    <LinearLayout
-        android:id="@+id/change_password"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/_40sdp"
-        android:layout_marginLeft="@dimen/_7sdp"
-        android:layout_marginRight="@dimen/_7sdp"
-        android:orientation="horizontal">
+                android:textColor="@color/black"
+                android:textFontWeight="800"
+                android:textSize="@dimen/_11sdp"
+                android:textStyle="bold" />
 
-        <ImageView
-            android:layout_width="@dimen/_23sdp"
-            android:layout_height="@dimen/_23sdp"
-            android:layout_gravity="center"
-            android:src="@drawable/ic_password"
-            app:tint="#2F34B2" />
+            <ImageView
+                android:layout_width="@dimen/_12sdp"
+                android:layout_height="@dimen/_12sdp"
+                android:layout_gravity="center"
+                android:src="@drawable/ic_right" />
+        </LinearLayout>
 
-        <TextView
+        <LinearLayout
+            android:id="@+id/scan_item"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_weight="1"
-            android:fontFamily="@font/nunito_regular"
-            android:gravity="left"
-            android:text="Change Password"
-            android:textColor="@color/black"
-            android:textFontWeight="800"
-            android:layout_marginLeft="@dimen/_11sdp"
-            android:textSize="@dimen/_11sdp"
-            android:textStyle="bold" />
+            android:layout_height="@dimen/_40sdp"
+            android:layout_marginLeft="@dimen/_7sdp"
+            android:layout_marginRight="@dimen/_7sdp"
+            android:orientation="horizontal">
 
-        <ImageView
-            android:layout_width="@dimen/_12sdp"
-            android:layout_height="@dimen/_12sdp"
-            android:layout_gravity="center"
-            android:src="@drawable/ic_right" />
-    </LinearLayout>
-    <LinearLayout
-        android:id="@+id/help_item"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/_40sdp"
-        android:layout_marginLeft="@dimen/_7sdp"
-        android:layout_marginRight="@dimen/_7sdp"
-        android:orientation="horizontal">
+            <ImageView
+                android:layout_width="@dimen/_23sdp"
+                android:layout_height="@dimen/_23sdp"
+                android:layout_gravity="center"
+                android:src="@drawable/ic_scaner"
+                app:tint="#2F34B2" />
 
-        <ImageView
-            android:layout_width="@dimen/_23sdp"
-            android:layout_height="@dimen/_23sdp"
-            android:layout_gravity="center"
-            android:src="@drawable/ic_help"
-            app:tint="#2F34B2" />
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_weight="1"
+                android:fontFamily="@font/nunito_regular"
+                android:gravity="left"
+                android:text="Scan Ticket"
+                android:textColor="@color/black"
+                android:textFontWeight="800"
+                android:layout_marginLeft="@dimen/_11sdp"
+                android:textSize="@dimen/_11sdp"
+                android:textStyle="bold" />
 
-        <TextView
+            <ImageView
+                android:layout_width="@dimen/_12sdp"
+                android:layout_height="@dimen/_12sdp"
+                android:layout_gravity="center"
+                android:src="@drawable/ic_right" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/change_password"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_weight="1"
-            android:fontFamily="@font/nunito_regular"
-            android:gravity="left"
-            android:text="Help"
-            android:textColor="@color/black"
-            android:textFontWeight="800"
-            android:layout_marginLeft="@dimen/_11sdp"
-            android:textSize="@dimen/_11sdp"
-            android:textStyle="bold" />
+            android:layout_height="@dimen/_40sdp"
+            android:layout_marginLeft="@dimen/_7sdp"
+            android:layout_marginRight="@dimen/_7sdp"
+            android:orientation="horizontal">
 
-        <ImageView
-            android:layout_width="@dimen/_12sdp"
-            android:layout_height="@dimen/_12sdp"
-            android:layout_gravity="center"
-            android:src="@drawable/ic_right" />
-    </LinearLayout>
-    <LinearLayout
-        android:id="@+id/logout"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/_40sdp"
-        android:layout_marginLeft="@dimen/_7sdp"
-        android:layout_marginRight="@dimen/_7sdp"
-        android:orientation="horizontal">
+            <ImageView
+                android:layout_width="@dimen/_23sdp"
+                android:layout_height="@dimen/_23sdp"
+                android:layout_gravity="center"
+                android:src="@drawable/ic_password"
+                app:tint="#2F34B2" />
 
-        <ImageView
-            android:layout_width="@dimen/_23sdp"
-            android:layout_height="@dimen/_23sdp"
-            android:layout_gravity="center"
-            android:src="@drawable/ic_logout"
-            app:tint="#2F34B2" />
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_weight="1"
+                android:fontFamily="@font/nunito_regular"
+                android:gravity="left"
+                android:text="Change Password"
+                android:textColor="@color/black"
+                android:textFontWeight="800"
+                android:layout_marginLeft="@dimen/_11sdp"
+                android:textSize="@dimen/_11sdp"
+                android:textStyle="bold" />
 
-        <TextView
+            <ImageView
+                android:layout_width="@dimen/_12sdp"
+                android:layout_height="@dimen/_12sdp"
+                android:layout_gravity="center"
+                android:src="@drawable/ic_right" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/help_item"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_weight="1"
-            android:fontFamily="@font/nunito_regular"
-            android:gravity="left"
-            android:text="Log out"
-            android:textColor="@color/black"
-            android:textFontWeight="800"
-            android:layout_marginLeft="@dimen/_11sdp"
-            android:textSize="@dimen/_11sdp"
-            android:textStyle="bold" />
+            android:layout_height="@dimen/_40sdp"
+            android:layout_marginLeft="@dimen/_7sdp"
+            android:layout_marginRight="@dimen/_7sdp"
+            android:orientation="horizontal">
 
-        <ImageView
-            android:layout_width="@dimen/_12sdp"
-            android:layout_height="@dimen/_12sdp"
-            android:layout_gravity="center"
-            android:src="@drawable/ic_right" />
+            <ImageView
+                android:layout_width="@dimen/_23sdp"
+                android:layout_height="@dimen/_23sdp"
+                android:layout_gravity="center"
+                android:src="@drawable/ic_help"
+                app:tint="#2F34B2" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_weight="1"
+                android:fontFamily="@font/nunito_regular"
+                android:gravity="left"
+                android:text="Help"
+                android:textColor="@color/black"
+                android:textFontWeight="800"
+                android:layout_marginLeft="@dimen/_11sdp"
+                android:textSize="@dimen/_11sdp"
+                android:textStyle="bold" />
+
+            <ImageView
+                android:layout_width="@dimen/_12sdp"
+                android:layout_height="@dimen/_12sdp"
+                android:layout_gravity="center"
+                android:src="@drawable/ic_right" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/logout"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_40sdp"
+            android:layout_marginLeft="@dimen/_7sdp"
+            android:layout_marginRight="@dimen/_7sdp"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:layout_width="@dimen/_23sdp"
+                android:layout_height="@dimen/_23sdp"
+                android:layout_gravity="center"
+                android:src="@drawable/ic_logout"
+                app:tint="#2F34B2" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_weight="1"
+                android:fontFamily="@font/nunito_regular"
+                android:gravity="left"
+                android:text="Log out"
+                android:textColor="@color/black"
+                android:textFontWeight="800"
+                android:layout_marginLeft="@dimen/_11sdp"
+                android:textSize="@dimen/_11sdp"
+                android:textStyle="bold" />
+
+            <ImageView
+                android:layout_width="@dimen/_12sdp"
+                android:layout_height="@dimen/_12sdp"
+                android:layout_gravity="center"
+                android:src="@drawable/ic_right" />
+        </LinearLayout>
     </LinearLayout>
-  </LinearLayout>
+</layout>
